Adding link for huntingtons disease

--- a/Varshaa Portfolio/Varshaa/index.html
+++ b/Varshaa Portfolio/Varshaa/index.html
@@ -567,7 +567,7 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Huntington's Disease Prediction</h3>
                                 <p class="portfolio__description">Built a model to predict occuence of Huntington's Disease give protein activation values.</p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                <a href="https://github.com/vstephne/Huntingtons-Disease-Prediction" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -613,14 +613,6 @@
 
                 <div class="contact__container container grid">
                     <div>
-                        <div class="contact__information">
-                            <i class="uil uil-phone contact__icon"></i>
-
-                            <div>
-                                <h3 class="contact__title">Call Me</h3>
-                                <span class="contact__subtitle">703-453-2425</span>
-                            </div>
-                        </div>
 
                         <div class="contact__information">
                             <i class="uil uil-envelope contact__icon"></i>
