links added to projects

--- a/Varshaa Portfolio/Varshaa/index.html
+++ b/Varshaa Portfolio/Varshaa/index.html
@@ -580,7 +580,7 @@
                             <div class="portfolio__data">
                                 <h3 class="portfolio__title">Cardiovascular Disease Prediction</h3>
                                 <p class="portfolio__description">Used machine learning to predict occurence of Cardiovascular disease using parameters like Age, Sex, Cholestrol etc.</p>
-                                <a href="#" class="button button--flex button--small portfolio__button">
+                                <a href="https://github.com/vstephne/Cardiovascular-Disease-Prediction" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
