--- a/Varshaa Portfolio/Varshaa/index.html
+++ b/Varshaa Portfolio/Varshaa/index.html
@@ -486,7 +486,7 @@
                    <div class="services__content">
                        <div>
                         <i class="uil uil-arrow services__icon"></i>
-                        <h3 class="services__title">Front End Development <br> Developer</h3>
+                        <h3 class="services__title">Front End Development </h3>
                        </div>
 
                        <span class="button button--flex button--small button--link services__button">
@@ -496,7 +496,7 @@
 
                        <div class="services__modal">
                            <div class="services__modal-content">
-                               <h4 class="services__modal-title">Front End Development <br> Developer</h4>
+                               <h4 class="services__modal-title">Front End Development</h4>
                                <i class="uil uil-times services__modal-close"></i>
 
                                <ul class="services__modal-services grid">
@@ -521,7 +521,7 @@
                     <div class="services__content">
                         <div>
                          <i class="uil uil-database services__icon"></i>
-                         <h3 class="services__title">Back End Development <br> Developer</h3>
+                         <h3 class="services__title">Back End Development </h3>
                         </div>
  
                         <span class="button button--flex button--small button--link services__button">
@@ -531,13 +531,13 @@
  
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Back End Development <br> Developer</h4>
+                                <h4 class="services__modal-title">Back End Development</h4>
                                 <i class="uil uil-times services__modal-close"></i>
  
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service__modal-icon"></i>
-                                        <p> Can Develop API using REST API</p>
+                                        <p> Can Develop API using REST API and provide secure connection to Databases</p>
                                     </li>
                                 </ul>
  
@@ -619,18 +619,18 @@
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle">varshaashree7@gmail.com</span>
+                                <span class="contact__subtitle">varshaashree14@gmail.com</span>
                             </div>
                         </div>
 
-                        <div class="contact__information">
+                        <!-- <div class="contact__information">
                             <i class="uil uil-map-marker contact__icon"></i>
 
                             <div>
                                 <h3 class="contact__title">Location</h3>
                                 <span class="contact__subtitle">10606 A Kitty Pozer Dr,Fairfax, Virginia</span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <form action="" class="contact__form grid">
@@ -682,7 +682,7 @@
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="https://www.instagram.com/" target="__blank" class="footer__social">
+                        <!-- <a href="https://www.instagram.com/" target="__blank" class="footer__social">
                             <i class="uil uil-instagram"></i>
                         </a>
                         <a href="https://twitter.com/" target="__blank" class="footer__social">
@@ -690,6 +690,15 @@
                         </a>
                         <a href="https://www.facebook.com/" target="__blank" class="footer__social">
                             <i class="uil uil-facebook-f"></i>
+                        </a> -->
+                        <a href="https://www.linkedin.com/in/vs-1306/" target="blank" class="footer__social">
+                            <i class="uil uil-linkedin-alt"></i>    
+                        </a>
+                        <a href="https://github.com/vstephne" target="blank" class="footer__social">
+                            <i class="uil uil-github"></i>
+                        </a>
+                        <a  href = "mailto: varshaashree14@gmail.com" target="blank" class="footer__social">
+                            <i class="uil uil-envelope"></i>
                         </a>
                     </div>
                 </div>
