Changes to projects

--- a/Varshaa Portfolio/Varshaa/index.html
+++ b/Varshaa Portfolio/Varshaa/index.html
@@ -130,7 +130,8 @@
 
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <p class="about__description">Full Stack Developer, with experience in Java, Java Script, Python(Flask), REST API and Microservice Architecture</p>
+                        <p class="about__description">Full Stack Developer, with experience in Java, Java Script,Springboot, Angular,Python(Flask), REST API and Microservice Architecture.</p>
+                        <p class="about__description">I am currently in my final semester of Master's in Computer Science at George Mason University.I am actively seeking for Full Time oppurtunities.</p>
                         <div class="about__info">
                             <div>
                                 <span class="about__info-title">02</span>
@@ -199,6 +200,26 @@
 
                               <div class="skills__data">
                                 <div class="skills__titles">
+                                    <h3 class="skills__name">Angular JS</h3>
+                                    <span class="skills__number">85%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__js"></span>
+                                </div>
+                              </div>
+
+                              <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Type Script</h3>
+                                    <span class="skills__number">70%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__js"></span>
+                                </div>
+                              </div>
+
+                              <div class="skills__data">
+                                <div class="skills__titles">
                                     <h3 class="skills__name">SAP UI5</h3>
                                     <span class="skills__number">80%</span>
                                 </div>
@@ -254,6 +275,16 @@
                             </div>
 
                             <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Node.JS</h3>
+                                    <span class="skills__number">60%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__scala"></span>
+                                </div>
+                              </div>
+
+                            <div class="skills__data">
                               <div class="skills__titles">
                                   <h3 class="skills__name">Scala</h3>
                                   <span class="skills__number">40%</span>
@@ -262,6 +293,7 @@
                                   <span class="skills__percentage skills__scala"></span>
                               </div>
                             </div>
+
                         </div>
                       </div>
                     </div>
@@ -563,11 +595,12 @@
                 <div class="swiper-wrapper">    
                         <!-- PORTFOLIO 1-->
                         <div class="portfolio__content grid swiper-slide">
-                            <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                            <img src="assets/img/cognates.png" alt="" class="portfolio__img">
                             <div class="portfolio__data">
-                                <h3 class="portfolio__title">Huntington's Disease Prediction</h3>
-                                <p class="portfolio__description">Built a model to predict occuence of Huntington's Disease give protein activation values.</p>
-                                <a href="https://github.com/vstephne/Huntingtons-Disease-Prediction" class="button button--flex button--small portfolio__button">
+                                <h3 class="portfolio__title">Prediction Of Cognate Reflexes Using CNN</h3>
+                                <p class="portfolio__description">The aim of the project is to predict missing cognate values in a particular cognate set using models like Convolution
+                                    Neural Network.</p>
+                                <a href="https://github.com/vstephne/Prediction-of-Cognate-Reflexes" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -581,6 +614,19 @@
                                 <h3 class="portfolio__title">Cardiovascular Disease Prediction</h3>
                                 <p class="portfolio__description">Used machine learning to predict occurence of Cardiovascular disease using parameters like Age, Sex, Cholestrol etc.</p>
                                 <a href="https://github.com/vstephne/Cardiovascular-Disease-Prediction" class="button button--flex button--small portfolio__button">
+                                    Demo
+                                    <i class="uil uil-arrow-right button__icon"></i>
+                                </a>
+                            </div>
+                        </div>
+
+                        <!-- PORTFOLIO 3-->
+                        <div class="portfolio__content grid swiper-slide">
+                            <img src="assets/img/gene.png" alt="" class="portfolio__img">
+                            <div class="portfolio__data">
+                                <h3 class="portfolio__title">Huntington's Disease Prediction</h3>
+                                <p class="portfolio__description">Built a model to predict occuence of Huntington's Disease give protein activation values.</p>
+                                <a href="https://github.com/vstephne/Huntingtons-Disease-Prediction" class="button button--flex button--small portfolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -675,9 +721,9 @@
 
                     <ul class="footer__links">
                         <li>
-                            <a href="#services" class="footer__link">Services</a>
-                            <a href="#portfolio" class="footer__link">Portfolio</a>
-                            <a href="#contact" class="footer__link">Contact</a>
+                            <a href="#services" class="footer__link">Services |</a>
+                            <a href="#portfolio" class="footer__link">Portfolio |</a>
+                            <a href="#contact" class="footer__link">Contact </a>
                         </li>
                     </ul>
 
