--- a/Varshaa Portfolio/Varshaa/index.html
+++ b/Varshaa Portfolio/Varshaa/index.html
@@ -700,7 +700,7 @@
                         </div>
 
                         <div>
-                            <a href="#" class="button button--flex">
+                            <a href="mailto:varshaashree14@gmail.com" class="button button--flex">
                                 Send Message
                                 <i class="uil uil-message button__icon"></i>
                             </a>
@@ -743,7 +743,7 @@
                         <a href="https://github.com/vstephne" target="blank" class="footer__social">
                             <i class="uil uil-github"></i>
                         </a>
-                        <a  href = "mailto: varshaashree14@gmail.com" target="blank" class="footer__social">
+                        <a  href = "mailto:varshaashree14@gmail.com" target="blank" class="footer__social">
                             <i class="uil uil-envelope"></i>
                         </a>
                     </div>
