--- a/Varshaa Portfolio/Varshaa/index.html
+++ b/Varshaa Portfolio/Varshaa/index.html
@@ -665,6 +665,7 @@
                                 <h3 class="contact__title">Email</h3>
                                 <span class="contact__subtitle">varshaashree14@gmail.com</span>
                             </div>
+                          
                         </div>
 
                         <!-- <div class="contact__information">
@@ -677,7 +678,7 @@
                         </div> -->
                     </div>
 
-                    <form action="" class="contact__form grid">
+                    <!-- <form action="mailto:varshaashree14@gmail.com" class="contact__form grid">
                         <div class="contact__inputs grid">
                             <div class="contact__content">
                                 <label for="" class="contact__label">Name</label>
@@ -703,7 +704,7 @@
                                 <i class="uil uil-message button__icon"></i>
                             </a>
                         </div>
-                    </form>
+                    </form> -->
                 </div>
             </section>
         </main>
